# GALAHAD

./: .cirrus.yml  .gitignore  LICENSE  README.SIF  README.data-file  README.julia  README.macosx  README.matlab  README.md  README.meson  README.qplib  README.trouble  README.windows  __init.py__  aliases  build_tarballs.jl  index.html  meson.build  meson_options.txt  paper  pyproject.toml  uninstall_galahad  version
include/: arc.h  bgo.h  blls.h  bqp.h  bqpb.h  bsc.h  convert.h  cqp.h  cro.h  cutest_routines.h  cutest_routines_double.h  cutest_routines_quadruple.h  cutest_routines_single.h  dgo.h  dps.h  dqp.h  eqp.h  fdc.h  fit.h  galahad.h  galahad_arc.h  galahad_bgo.h  galahad_blas.h  galahad_blas_original.h  galahad_blls.h  galahad_bllsb.h  galahad_bnls.h  galahad_bqp.h  galahad_bqpb.h  galahad_bsc.h  galahad_c.h  galahad_c_common.h  galahad_c_double.h  galahad_c_quadruple.h  galahad_c_single.h  galahad_callbacks.h  galahad_ccqp.h  galahad_cfunctions.h  galahad_clls.h  galahad_convert.h  (+216 more)
src/ampl/: amplinter.h  galahad_ampl.c  galahad_ampl.h  makemaster  meson.build  wrap_bqp.F90  wrap_cqp.F90  wrap_cqp.f90  wrap_filtrane.F90  wrap_filtrane.f90  wrap_lancelot.F90  wrap_presolve.F90  wrap_presolve.f90  wrap_qp.F90  wrap_qpa.F90  wrap_qpb.F90  wrap_qpc.F90  wrap_qpc.f90
src/arc/: ARC.template  arc.F90  arc.f90  arcds.output  arcs.f90  arcs2.f90  arcs3.f90  arcs4.f90  arct.F90  arct.f90  arct2.f90  arcti.F90  arcti.f90  makemaster  meson.build  runarc_sif.F90  runarc_sif.f90  usearc.F90
src/bgo/: bgo.F90  bgo.f90  bgos.f90  bgos2.f90  bgot.F90  bgot.f90  bgoti.F90  bgoti.f90  makemaster  meson.build  runbgo_sif.F90  usebgo.F90  usebgo.f90
src/blas/: meson.build
src/blls/: BLLS.template  blls.F90  blls.f90  bllsds.output  bllsds2.output  bllsds3.output  bllss.f90  bllss2.f90  bllss3.f90  bllst.F90  bllst.f90  bllsti.F90  bllsti.f90  makemaster  meson.build  runblls_sif.F90  runblls_sif.f90  useblls.F90  useblls.f90
src/bllsb/: BLLSB.template  bllsb.F90  bllsbs.f90  bllsbs2.f90  bllsbs3.f90  bllsbt.F90  bllsbti.F90  makemaster  meson.build  runbllsb_sif.F90  usebllsb.F90
src/bnls/: BNLS.template  bnls.F90  bnlss.f90  bnlss2.f90  bnlss3.f90  bnlst.F90  bnlst2.F90  bnlsti.F90  makemaster  meson.build  runbnls_sif.F90  usebnls.F90
src/bqp/: BQP.template  bqp.F90  bqp.f90  bqpds.output  bqps.f90  bqps2.f90  bqps3.f90  bqpt.F90  bqpt.f90  bqpti.F90  bqpti.f90  inbqp.F90  inbqp.f90  makemaster  meson.build  runbqp_qplib.F90  runbqp_sif.F90  runbqp_sif.f90  usebqp.F90  usebqp.f90
src/bqpb/: BQPB.template  bqpb.F90  bqpb.f90  bqpbds.output  bqpbs.f90  bqpbs2.f90  bqpbs3.f90  bqpbt.F90  bqpbt.f90  bqpbti.F90  bqpbti.f90  inbqpb.F90  inbqpb.f90  makemaster  meson.build  runbqpb_qplib.F90  runbqpb_sif.F90  runbqpb_sif.f90  usebqpb.F90  usebqpb.f90
src/bsc/: BSC.template  bsc.F90  bsc.f90  bscds.output  bscs.f90  bsct.F90  bsct.f90  bscti.F90  makemaster  meson.build
src/ccqp/: CCQP.template  ccqp.F90  ccqp.f90  ccqpds.output  ccqpds3.output  ccqpdt.output  ccqps.f90  ccqps2.f90  ccqps3.f90  ccqpt.F90  ccqpt.f90  ccqpti.F90  ccqpti.f90  inccqp.F90  inccqp.f90  makemaster  meson.build  runccqp_qplib.F90  runccqp_sif.F90  runccqp_sif.f90  useccqp.F90  useccqp.f90
src/cdqp/: CDQP.template  cdqp.F90  cdqp.f90  cdqps.f90  cdqpt.F90  cdqpt.f90  incdqp.F90  incdqp.f90  makemaster  meson.build  runcdqp_qplib.F90  runcdqp_sif.F90  runcdqp_sif.f90  usecdqp.F90  usecdqp.f90
src/clls/: CLLS.template  clls.F90  clls.f90  cllsds.output  cllss.f90  cllss2.f90  cllss3.f90  cllst.F90  cllsti.F90  makemaster  meson.build  runclls_sif.F90  useclls.F90  useclls.f90
src/convert/: CONVERT.template  convert.F90  convert.f90  converts.f90  convertt.F90  convertt.f90  makemaster  meson.build
src/cqp/: CQP.template  cqp.F90  cqp.f90  cqpds.output  cqps.f90  cqps2.f90  cqps3.f90  cqpt.F90  cqpt.f90  cqpti.F90  cqpti.f90  incqp.F90  incqp.f90  makemaster  meson.build  runcqp_qplib.F90  runcqp_sif.F90  runcqp_sif.f90  usecqp.F90  usecqp.f90
src/cro/: CRO.template  cro.F90  cro.f90  crods.output  cros.f90  cros2.f90  cros3.f90  crot.F90  crot.f90  croti.F90  makemaster  meson.build
src/dgo/: dgo.F90  dgo.f90  dgos.f90  dgos2.f90  dgot.F90  dgot.f90  dgoti.F90  makemaster  meson.build  rundgo_sif.F90  usedgo.F90
src/dlp/: DLP.template  dlp.F90  dlp.f90  dlps.f90  dlpt.F90  indlp.F90  indlp.f90  makemaster  meson.build  rundlp_qplib.F90  rundlp_sif.F90  rundlp_sif.f90  usedlp.F90  usedlp.f90
src/dps/: DPS.template  dps.F90  dps.f90  dpsds.output  dpsds2.output  dpsdt.output  dpss.f90  dpss2.f90  dpst.F90  dpst.f90  makemaster  meson.build  rundps_sif.F90  rundps_sif.f90  usedps.F90  usedps.f90
src/dqp/: DQP.template  dqp.F90  dqp.f90  dqpds.output  dqps.f90  dqps2.f90  dqps3.f90  dqpt.F90  dqpt.f90  dqpti.F90  indqp.F90  indqp.f90  makemaster  meson.build  rundqp_qplib.F90  rundqp_sif.F90  rundqp_sif.f90  usedqp.F90  usedqp.f90
src/dum/: bpmpd.F90  cutest_dummy.F90  cutest_dummy.f90  destsv.f  dgqt.f  dummy.f  dummy_hsl.F90  dummy_hsl.f90  dummy_hsl_c.F90  dummy_spral.f90  fa14d.f  fa14s.f  fd15d.f  fd15s.f  hsl_ad02d.f90  hsl_ad02s.F90  hsl_ad02s.f90  hsl_kb22l.f90  hsl_ma48d.f90  hsl_ma48s.f90  hsl_ma54d.f90  hsl_ma54s.f90  hsl_ma57d.f90  hsl_ma57s.F90  hsl_ma57s.f90  hsl_ma64d.f90  hsl_ma64s.f90  hsl_ma77d.f90  hsl_ma77s.f90  hsl_ma86d.F90  hsl_ma86d.f90  hsl_ma86s.F90  hsl_ma86s.f90  hsl_ma87d.F90  hsl_ma87d.f90  hsl_ma87s.f90  hsl_ma97d.f90  hsl_ma97s.F90  hsl_ma97s.f90  hsl_mc34d.F90  (+127 more)
src/eqp/: EQP.template  eqp.F90  eqp.f90  eqpds.output  eqpdt.output  eqps.f90  eqps.options.F90  eqps.options.f90  eqpt.F90  eqpt.f90  eqpti.F90  eqpti.f90  makemaster  meson.build  runeqp_sif.F90  runeqp_sif.f90  useeqp.F90  useeqp.f90
src/fdc/: FDC.template  fdc.F90  fdc.f90  fdcds.output  fdcs.f90  fdct.F90  fdct.f90  fdcti.F90  fdcti.f90  makemaster  meson.build
src/fdh/: FDH.template  fdh.F90  fdh.f90  fdhds.output  fdhdt.output  fdhs.f90  fdhs2.data  fdhs2.f90  fdht.F90  fdht.f90  makemaster  meson.build  runfdh_sif.F90  runfdh_sif.f90  usefdh.F90  usefdh.f90
src/filtrane/: filtrane.F90  (+21 more)
(+7035 files in other folders)
